--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "^14.2.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.3.0"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
